--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 # Dependencies
 node_modules/
-venv/
-env/
-.venv/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Build output
+# Production builds
 dist/
 build/
-*.pyc
-__pycache__/
 
 # Environment variables
 .env
@@ -16,13 +14,30 @@ __pycache__/
 .env.development.local
 .env.test.local
 .env.production.local
-*.env*
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-*.log
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.venv/
+
+# Flask
+instance/
+.webassets-cache
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
@@ -33,62 +48,41 @@ yarn-error.log*
 ehthumbs.db
 Thumbs.db
 
-# IDE/Editor
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Logs
+logs
+*.log
 
-# Misc
-*.local
-.cache/
-.temp/
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# Data exports/backups
-*.sqlite
-*.bak
-*.tmp
+# Coverage directory used by tools like istanbul
+coverage/
 
-# Python
-*.pyc
-*.pyo
-*.pyd
-.Python
-pip-log.txt
-pip-delete-this-directory.txt
+# nyc test coverage
+.nyc_output
 
-# Machine Learning Models
-ml_models/
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# ML Models (if they're large)
 *.pkl
 *.joblib
-*.h5
-*.model
-
-# Database files
-*.db
-*.sqlite3
-
-# Production files
-.env.production
-.env.staging
-
-# API Keys and Secrets
-*secret*
-*key*
-*password*
-*token*
 
 # Temporary files
 *.tmp
 *.temp
-*.cache
-
-# Coverage reports
-coverage/
-.coverage
-htmlcov/
-
-# Test files
-.pytest_cache/
-.tox/
