--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
   - type: web
     name: herculesai-backend
     env: python
-    plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn flask_api:app --bind 0.0.0.0:$PORT
+    plan: starter
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
@@ -17,7 +17,7 @@ services:
   - type: web
     name: herculesai-frontend
     env: static
-    plan: free
+    plan: starter
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     envVars:
