--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+venv/
+env/
+.venv/
 
-# Production builds
+# Build output
 dist/
 build/
+*.pyc
+__pycache__/
 
 # Environment variables
 .env
@@ -14,30 +16,13 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+*.env*
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-.venv/
-
-# Flask
-instance/
-.webassets-cache
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
 
 # OS
 .DS_Store
@@ -48,41 +33,62 @@ instance/
 ehthumbs.db
 Thumbs.db
 
-# Logs
-logs
-*.log
+# IDE/Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Misc
+*.local
+.cache/
+.temp/
 
-# Coverage directory used by tools like istanbul
-coverage/
+# Data exports/backups
+*.sqlite
+*.bak
+*.tmp
 
-# nyc test coverage
-.nyc_output
+# Python
+*.pyc
+*.pyo
+*.pyd
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# ML Models (if they're large)
+# Machine Learning Models
+ml_models/
 *.pkl
 *.joblib
+*.h5
+*.model
+
+# Database files
+*.db
+*.sqlite3
+
+# Production files
+.env.production
+.env.staging
+
+# API Keys and Secrets
+*secret*
+*key*
+*password*
+*token*
 
 # Temporary files
 *.tmp
 *.temp
+*.cache
+
+# Coverage reports
+coverage/
+.coverage
+htmlcov/
+
+# Test files
+.pytest_cache/
+.tox/
